qc pass: ppp with ldap authentication
qc pass: ppp with eap authentication
qc pass: ppp with short multilink fragmentation
---------------------------------- 2025-09-28 12:18:48 25.9.28
no qc pass: ppp with short multilink fragmentation
no qc pass: ppp with eap authentication
qc pass: ppp with pap authentication
qc pass: ppp routes with local authentication
qc pass: ppp with long multilink fragmentation
qc pass: ldap server
---------------------------------- 2025-10-04 13:36:06 25.10.4
no qc pass: bgp maximum prefix in
failed: bgp maximum prefix in
---------------------------------- 2025-10-04 14:03:26 25.10.4
no failed: bgp maximum prefix in
qc pass: bgp maximum prefix in
---------------------------------- 2025-10-06 20:26:46 25.10.6
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-10-06 21:03:10 25.10.6
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-10-08 07:18:04 25.10.8
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-08 07:44:20 25.10.8
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-14 09:34:35 25.10.14
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-14 10:56:17 25.10.14
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-14 21:25:32 25.10.14
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-15 05:01:24 25.10.15
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-16 10:02:28 25.10.16
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports