@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.10.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-10-16 10:34:49, took 00:12:02, with 50 workers, on 844 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2025-10-16 11:06:39, took 00:12:01, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
