@@ -17597,3 +17597,6 @@ qc pass: wireguard over asymmetric ports
 ---------------------------------- 2025-10-16 10:02:28 25.10.16
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-10-16 10:39:58 25.10.16
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
